--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,3 +91,25 @@ button {
    button:hover .button-text {
     color: #fff;
    }
+
+
+   /* navbar */
+.open span:nth-child(1) {
+    transform: rotate(45deg) translate(6.5px, 6.5px);
+  }
+  
+  .open span:nth-child(2) {
+    width: 0;
+    opacity: 0;
+  }
+  
+  .open span:nth-child(3) {
+    transform: rotate(-45deg) translate(6.5px, -6.5px);
+  }
+  
+
+  
+  .navbar-dropdown {
+    height: calc(100vh - 100%);
+  }
+  
