--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ button {
     margin: 0;
     width: 3rem;
     height: 3rem;
-    background: red;
+    background: green;
     border-radius: 1.625rem;
    }
    
