--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;600;700&display=swap');
-
+@import url('https://fonts.cdnfonts.com/css/maison-neue');
 
 button {
     position: relative;
@@ -120,3 +120,21 @@ button {
     padding: 1px;
     border-radius: 50%;
    }
+
+   .slick-slide {
+  margin: 0 10px;
+  
+}
+.slick-list {
+  margin: 0 -10px;
+}
+
+@media screen and (max-width: 480px) {
+  .slick-slide {
+    margin: 0 5px;
+    
+  }
+  .slick-list {
+    margin: 0 -5px;
+  }
+}
